i dont even know what i did

--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@nuxt/ui": "^3.3.2",
+    "@nuxt/ui-pro": "^3.3.2",
     "@tailwindcss/vite": "^4.1.12",
     "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/simple-icons": "^1.2.49"
   }
 }
