--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@nuxt/ui": "^3.3.2",
-    "@nuxt/ui-pro": "^3.3.2",
     "@tailwindcss/vite": "^4.1.12",
     "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.3",
@@ -20,6 +19,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.71",
     "@iconify-json/simple-icons": "^1.2.49"
   }
 }
